@@ -1,0 +1,45 @@
+﻿[00:17.20]雨淋湿了天空 毁得很讲究
+[00:22.30]你说你不懂 为何在这时牵手
+[00:26.43]我晒干了沉默 悔得很冲动
+[00:30.33]就算这是做错 也只是怕错过
+[00:35.50]在一起叫梦 分开了叫痛
+[00:38.65]是不是说 没有做完的梦最痛
+[00:42.80]迷路的后果 我能承受
+[00:46.62]这最后的出口 在爱过了才有
+[00:53.22]能不能给我一首歌的时间
+[00:57.20]紧紧的把那拥抱变成永远
+[01:01.27]在我的怀里你不用害怕失眠
+[01:05.44]如果你想忘记我也能失忆
+[01:09.45]能不能给我一首歌的时间
+[01:13.51]把故事听到最后才说再见
+[01:17.65]你送我的眼泪 让它留在雨天
+[01:21.65]越过你划的线 我定了勇气的终点
+[01:30.97]雨淋湿了天空 毁得很讲究
+[01:35.71]你说你不懂 为何在这时牵手
+[01:39.40]我晒干了沉默 悔得很冲动
+[01:43.80]就算这是做错 也只是怕错过
+[01:48.27]在一起叫梦 分开了叫痛
+[01:52.11]是不是说 没有做完的梦最痛
+[01:56.11]迷路的后果 我能承受
+[01:59.77]这最后的出口 在爱过了才有
+[02:06.26]能不能给我一首歌的时间
+[02:10.55]紧紧的把那拥抱变成永远
+[02:14.70]在我的怀里你不用害怕失眠
+[02:18.73]如果你想忘记我也能失忆
+[02:22.94]能不能给我一首歌的时间
+[02:26.84]把故事听到最后才说再见
+[02:30.90]你送我的眼泪 让它留在雨天
+[02:34.91]越过你划的线 我定了勇气的终点
+[02:43.22]你说我不该 不该
+[02:45.91]不该在这时候说了我爱你
+[02:52.06]要怎么证明我没有说谎的力气
+[02:59.10]请告诉我暂停算不算放弃
+[03:07.90]我只有一天的回忆
+[03:15.44]能不能给我一首歌的时间
+[03:19.64]紧紧的把那拥抱变成永远
+[03:23.54]在我的怀里你不用害怕失眠
+[03:27.60]如果你想忘记我也能失忆
+[03:31.94]能不能给我一首歌的时间
+[03:35.90]把故事听到最后才说再见
+[03:40.04]你送我的眼泪 让它留在雨天
+[03:44.84]越过你划的线 我定了勇气的终点
